pgorm-query/pgorm-query-derive/tests/compile-fail/path_method.rs
use pgorm_query::Iden;

#[derive(Iden)]
enum Asset {
    Table,
    Id,
    AssetName,
    #[method]
    Creation,
}

fn main() {}
